# prism-research-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt  run.sh  run_demo.py  streamlit_app.py
.github/workflows/: ci.yml
api/: app.py
core/: __init__.py  byok.py  config.py  format.py  graph.py  guardrails.py  llm_json.py  logging_config.py  obs.py  runner.py  schemas.py
core/agents/: critic.py  planner.py  researcher.py  summariser.py  vision.py
core/tools/: pdf_loader.py  vector_store.py  web_search.py
data/corpus/: 00_complaint_categories_overview.md  01_network_coverage.md  02_billing_charges.md  03_recharge_topup_failures.md  04_data_speed_throttling.md  05_provisioning_activation.md  06_complaint_handling_switching.md  SOURCES.md
docs/: SUBMISSION_CHECKLIST.md  architecture.md  diagram.mmd  recording_runsheet.md
eval/: eval_dataset.jsonl  run_eval.py
examples/: sample_output.md  sample_query.md
scripts/: build_index.py  check_tools.py  make_dashboard.py  package.sh  run_graph.py  scan_secrets.sh  smoke.py
tests/: conftest.py  test_api.py  test_concurrency.py  test_eval.py  test_format.py  test_graph_wiring.py  test_guardrails.py  test_logging.py  test_planner.py  test_run_args.py  test_runner.py  test_schemas.py  test_smoke.py  test_tools.py  test_vision.py
